fix: z-index container in case of ion-fab button under

--- a/src/components/bottom-sheet/bottom-sheet.css
+++ b/src/components/bottom-sheet/bottom-sheet.css
@@ -45,6 +45,7 @@
     max-width: var(--sheet-max-width);
 
     position: relative;
+    z-index: var(--sheet-z-index, 9);
 }
 
 .sheet {
